# IAMU_Project

app/: build.gradle.kts
app/src/androidTest/java/good/stuff/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vulkan_renderer.cpp
app/src/main/cpp/shaders/: shader.frag  shader.vert
app/src/main/java/good/stuff/myapplication/: DashboardFragment.kt  ExploreFragment.kt  FavoritesFragment.kt  GamePagerActivity.kt  MainActivity.kt  SplashActivity.kt
app/src/main/java/good/stuff/myapplication/adapter/: FavoritesAdapter.kt  GameAdapter.kt  GamePagerAdapter.kt
app/src/main/java/good/stuff/myapplication/api/: IGDBFetcher.kt  IGDBService.kt  IGDBWorker.kt  IGDBWorkerDetailed.kt  RetrofitClient.kt
app/src/main/java/good/stuff/myapplication/dao/: GameRepository.kt  (+1 more)
app/src/main/res/drawable/: holder_rectangle.xml  ic_base.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_play_station.xml  ic_rod.xml  ic_tag.xml  rating_badge.xml  rounded_button.xml  splash_background.xml
app/src/main/res/layout/: activity_game_pager.xml  activity_main.xml  activity_splash.xml  bottom_nav_menu.xml  fragment_dashboard.xml  fragment_favorites.xml  fragment_game_detail.xml  item_favorite_game.xml  item_game.xml  item_game_pager.xml
app/src/main/res/menu/: nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/good/stuff/myapplication/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+25 files in other folders)
